# azercell_project2

./: README.md
backend/: Dockerfile  README.md  app.py  pyproject.toml
backend/data/processed/: ramen-ratings.pkl
backend/notebooks/: vasif-orujzada-eda.ipynb  vasif-orujzada-fe1.ipynb  vasif-orujzada-fe2.ipynb  vasif-orujzada-trainmodel.ipynb
backend/src/data/: housing_prices.pkl  make_dataset.py  multisim_dataset.parquet
backend/src/features/: build_features.py
backend/src/models/: multisim_dataset_train_model.pkl  predict_model.py  train_model.py
backend/src/visualization/: visualize.py
frontend/: Dockerfile  app.py  pyproject.toml
