[project]
name = "azercell_project1"
version = "0.1.0"
description = "Reproducible ML project scaffold powered by uv"
readme = "README.md"
requires-python = ">= 3.13"
authors = [{ name = "vasifvortex", email = "vasif.oruczade@gmail.com" }]
dependencies = [
    "boto3>=1.40.7",
    # runtime deps go here, e.g. "pandas>=2.2"
    "category-encoders>=2.8.1",
    "numpy>=2.3.2",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "xgboost>=3.0.4",
     "fastapi>=0.116.1",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.1",
    "uvicorn>=0.35.0",
]

# [tool.ruff]
# lint.extend-select = ["ALL"]


[tool.ruff.lint]
ignore = ["E402"]

[tool.black]
line-length = 100
extend-exclude = '^(data|reports|models|notebooks)/'

[tool.isort]
profile = "black" # keeps isort compatible with Black
line_length = 100
skip_glob = ["data/**", "reports/**", "models/**", "notebooks/**"]
